// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Undirected Adjacency Graph Unit tests Add edges Should throw if we try to add to a non existent vertex 1`] = `"One or both of these vertices don't exist Point A / Point C"`;

exports[`Undirected Adjacency Graph Unit tests Removal Should remove a vertex 1`] = `
Object {
  "Point B": Object {
    "edges": Object {
      "Point C": false,
      "Point D": false,
    },
    "payload": true,
  },
  "Point C": Object {
    "edges": Object {
      "Point B": true,
    },
    "payload": false,
  },
  "Point D": Object {
    "edges": Object {
      "Point B": true,
    },
    "payload": false,
  },
}
`;

exports[`Undirected Adjacency Graph Unit tests Removal should remove an edge 1`] = `
Object {
  "Point A": Object {
    "edges": Object {
      "Point C": false,
    },
    "payload": true,
  },
  "Point B": Object {
    "edges": Object {
      "Point C": false,
      "Point D": false,
    },
    "payload": true,
  },
  "Point C": Object {
    "edges": Object {
      "Point A": true,
      "Point B": true,
    },
    "payload": false,
  },
  "Point D": Object {
    "edges": Object {
      "Point B": true,
    },
    "payload": false,
  },
}
`;
